# viacep-rs

./: .gitignore  .wakatime-project  Cargo.toml  README.md  _config.yml  appveyor.yml  sonar-project.properties  techstack.md  techstack.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: lint.yml  size-label.yml  sonar-cloud.yml
src/: lib.rs  main.rs  utils.rs
