[package]
name = "viacep_rs"
version = "0.1.0"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2018"
description = "The Via CEP client wrapper written in Rust."
repository = "https://github.com/guibranco/viacep-rs.git"
homepage = "https://github.com/guibranco/viacep-rs"
keywords = ["rest", "client", "cep", "viacep"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"

[badges]
appveyor = { repository = "guibranco/viacep-rs", branch = "master", service = "github" }

[dependencies]
dotenv = "0.11.0"
env_logger = "0.5.9"
futures = "0.1.0"
hyper = "0.11.25"
hyper-tls = "0.1.3"
log = "0.4.8"
prettytable-rs = "0.6.7"
serde = "1.0.42"
serde_derive = "1.0.42"
serde_json = "1.0.16"
tokio-core = "0.1.17"
url = "1.7.0"